--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@types/react": "~18.2.45",
+    "dom-to-image": "^2.6.0",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-view-shot": "^3.8.0",
+    "react-native-web": "^0.19.10",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
